--- a/style/newpanel.css
+++ b/style/newpanel.css
@@ -34,7 +34,7 @@ svg{
     align-items: center;
     margin-top: 2rem;
     padding: 0px 1rem;
-    box-shadow: 0 0 .4rem #9e9e9e;
+    box-shadow: 0 0 .4rem #bdbdbd;
     border-radius: 2rem;
 }
 /* template left */
@@ -124,21 +124,42 @@ svg{
 .template-right__select-rule-wrapper{
     display: flex;
     gap: 1rem;
-    padding: .5rem 1rem;
+    padding: 0rem 1rem;
     border-radius: .5rem;
-    background-color: #fafafa;
+    background-color: #eeeeee;
     width: max-content;
     margin: 0px auto;
 }
 .template-right__select-rule{
     border-radius: .5rem;
-    padding: .5rem 1rem;
+    padding: 1rem ;
     font-family: vazir;
     color: #616161;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    user-select: none;
+}
+.template-right__select-rule::after{
+    position: absolute;
+    content: '';
+    bottom: -100%;
+    right: 0;
+    left: 0;
+    margin: 0px auto;
+    width: 2rem;
+    height: 1rem;
+    border-radius: 2rem 2rem 0px 0px;
+    background-color: var(--primary-color);
+    transition: all 180ms ease;
+}
+.template-right__select-rule--active.template-right__select-rule::after{
+    bottom: 0;
 }
 .template-right__select-rule--active{
-    background-color: #eeeeee;
-    border:1px solid #1e88e5;
+    /* background-color: #bdbdbd;
+    border:1px solid #1e88e5; */
+    color: var(--primary-color);
 }
 
 @media (max-width:992px) {
@@ -148,5 +169,8 @@ svg{
     }
     .temlate-left{
         display: none;
+    }
+    .temlate-right{
+        flex-basis: 100%;
     }
 }
