--- a/style/newpanel.css
+++ b/style/newpanel.css
@@ -41,6 +41,7 @@ body {
     z-index: 5;
 }
 
+
 .hidden{
     display: none;
 }
@@ -65,6 +66,7 @@ body {
     align-items: end;
     position: relative;
     overflow: hidden;
+    user-select: none;
 }
 .temlate-left__img {
     width: 100%;
@@ -152,7 +154,7 @@ body {
     width: max-content;
     margin: 0px auto;
     margin-bottom: 3rem;
-    align-self: baseline;
+    
 }
 .template-right__select-rule{
     border-radius: .5rem;
@@ -189,21 +191,22 @@ body {
 /* vakil form */
 
 .vakil-form{
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: center; */
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    flex-direction: column;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
     gap: 1rem;
     padding: 0px 2rem;
     direction: rtl;
 }
 .vakil-form__image-wrapper {
     position: relative;
-    width: 5rem;
-    height: 5rem;
-    grid-column: span 2;
-    margin: 0px auto;
+    width: 6rem;
+    height: 6rem;
+    /* margin: 0px auto; */
+    margin-right: auto;
     border-radius: 50%;
     cursor: pointer;
     border: 3px solid var(--section-bg-color);
@@ -251,14 +254,17 @@ body {
     border: none;
     outline: none;
     font-size: 1.4rem;
-    padding:.5rem 1rem;
+    padding:.7rem 1rem;
     font-family: vazir;
     color: var(--text-color);
     border-radius: .7rem;
     transition: all 180ms ease;
     border-right:5px solid transparent;
     width: 100%;
-    background-color: var(--section-bg-color);
+    background-color: var(--section-bg-color) !important;
+}
+.vakil-form__input:first-child{
+    margin-bottom: 3rem;
 }
 .vakil-form__input::placeholder {
     transition: all 180ms ease;
@@ -269,7 +275,9 @@ body {
 .vakil-form__input:focus , .vakil-form__text-area:focus {
     border-right-color:var(--primary-color);
 }
-
+input:internal-autofill-selected{
+    background-color: var(--section-bg-color);
+}
 /* .vakil-form__text-area {
     border: none;
     outline: none;
@@ -286,7 +294,7 @@ body {
     color: var(--text-color);
 } */
 
-.vakil-form__skill-picker{
+/* .vakil-form__skill-picker{
     background-color: var(--primary-color);
     text-align: center;
     padding: 1rem 2rem;
@@ -298,23 +306,26 @@ body {
     grid-column: span 2;
     border: 2px solid transparent;
     transition: all 180ms ease-in;
-}
+} */
 .vakil-form__skill-picker:hover{
     background-color: transparent;
     color: var(--primary-color);
     border-color: var(--primary-color);
     transform: scale(.9);
 }
-
-.vakil-form__submit-btn{
-    width: 50%;
-    margin: 0px auto;
+.vakil-form__btn-wrapper{
+    display: flex;
+    justify-content: space-between;
+}
+.vakil-form__submit-btn,.vakil-form__perv-btn {
+    
+    flex-basis: 30%;
     border: none;
     outline: none;
     border: 2px solid var(--primary-color);
     padding:.5rem 0px;
-    font-size: 1.8rem;
-    font-family: vaizr;
+    font-size: 1.6rem;
+    font-family: vazir;
     border-radius: .7rem;
     position: relative;
     overflow: hidden;
@@ -322,15 +333,14 @@ body {
     text-align: center;
     color: var(--text-color);
     transition: all 180ms ease 50ms;
-    grid-column: span 2;
 }
-.vakil-form__submit-btn:hover{
+.vakil-form__submit-btn:hover,.vakil-form__perv-btn:hover{
     color: #1e88e5;
-    width: 60%;
+    flex-basis: 40%;
     padding-top: .4rem;
     padding-bottom: .4rem;
 }
-.vakil-form__submit-btn::after{
+.vakil-form__submit-btn::after,.vakil-form__perv-btn::after{
     position: absolute;
     content: '';
     height: 100%;
@@ -341,12 +351,18 @@ body {
     background-color: var(--section-bg-color);
     z-index: -1;
 }
-.vakil-form__submit-btn:hover::after{
+.vakil-form__submit-btn::after{
+    left: unset;
+    right: 0;
+}
+.vakil-form__submit-btn:hover::after,.vakil-form__perv-btn:hover::after {
     width: 100%;
 }
+.vakil-form__perv-btn {
 
+}
 
-.vakil-form__modal{
+/* .vakil-form__modal{
     position: absolute;
     width: 70%;
     height: 80vh;
@@ -366,36 +382,32 @@ body {
     opacity: 1;
     visibility: visible;
     transform: translateY(0rem);
-}
-.x{
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: var(--negative-bg-color);
-    width: 34px;
-    height: 34px;
-    cursor: pointer;
+} */
+.vakil-form__step-wrapper {
     display: flex;
-    align-items: center;
     justify-content: center;
-    padding: .3rem;
+    gap: 1rem;
+    margin-top: 4rem;
+    direction: ltr;
 }
-/*  */
-.cover{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    inset: 0;
-    margin: auto;
-    background-color: rgba(0, 0, 0, .2);
-    z-index: 2;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 180ms ease;
+        /* step by step styles */
+.tab{
+    display: none;
+    transition: all 180ms ease-in;
 }
-.cover.cover--show{
-    opacity: 1;
-    visibility: visible;
+.tab--show{
+    display: block;
+}
+.step{
+    display: block;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: var(--section-bg-color);
+    border: 2px solid var(--negative-bg-color);
+    border-radius: 50%;
+}
+.step--pased{
+    background-color: var(--primary-color);
 }
 @media (max-width:992px) {
     .template{
@@ -410,13 +422,7 @@ body {
     }
 }
 @media (max-width:400px) {
-    .vakil-form{
-        grid-template-columns: 1fr;
-    }
     .vakil-form__span-for-input{
         width: 100%;
-    }
-    .vakil-form__profile-img , .vakil-form__submit-btn{
-        grid-column: auto;
     }
 }
