--- a/style/newpanel.css
+++ b/style/newpanel.css
@@ -36,6 +36,7 @@ body {
     font-family: vazir;
     position: relative;
     padding-top: 2rem;
+    overflow: hidden;
 }
 /* component */
 .z-index-5{
@@ -49,6 +50,14 @@ select::-webkit-scrollbar-thumb{
      
     background-color: var(--primary-color);
     border-radius: 5rem;
+}
+.link-text{
+    color: var(--primary-color);
+}
+.form-hidden{
+    opacity: 0 !important;
+    visibility: hidden !important;
+    height: 0px !important;
 }
 
 .hidden{
@@ -153,6 +162,8 @@ select::-webkit-scrollbar-thumb{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
+    padding-top: 5rem;
 }
 .template-right__select-rule-wrapper{
     display: flex;
@@ -163,7 +174,10 @@ select::-webkit-scrollbar-thumb{
     width: max-content;
     margin: 0px auto;
     margin-bottom: 3rem;
-    
+    position: absolute;
+    top: 3rem;
+    right: 0;
+    left: 0;
 }
 .template-right__select-rule{
     border-radius: .5rem;
@@ -210,6 +224,7 @@ select::-webkit-scrollbar-thumb{
     padding: 0px 2rem;
     direction: rtl;
     overflow: hidden;
+    
 }
 .vakil-form__image-wrapper {
     position: relative;
@@ -369,7 +384,7 @@ select::-webkit-scrollbar-thumb{
     display: flex;
     justify-content: space-between;
 }
-.vakil-form__submit-btn,.vakil-form__perv-btn {
+.vakil-form__submit-btn,.vakil-form__perv-btn{
     
     flex-basis: 30%;
     border: none;
@@ -388,9 +403,9 @@ select::-webkit-scrollbar-thumb{
 }
 .vakil-form__submit-btn:hover,.vakil-form__perv-btn:hover{
     color: #1e88e5;
-    flex-basis: 40%;
-    padding-top: .4rem;
-    padding-bottom: .4rem;
+    /* flex-basis: 40%; */
+    /* padding-top: .4rem;
+    padding-bottom: .4rem; */
 }
 .vakil-form__submit-btn::after,.vakil-form__perv-btn::after{
     position: absolute;
@@ -545,6 +560,85 @@ select::-webkit-scrollbar-thumb{
 }
 .step--pased{
     background-color: var(--primary-color);
+}
+
+/* login form */
+
+.login-form{
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-evenly;
+
+}
+.login-form__title{
+    font-size: 2.6rem;
+    color: var(--text-color);
+    text-align: center;
+}
+
+.login-form__create-account {
+    text-align: center;
+    color: var(--text-color);
+    cursor: pointer;
+}
+
+.login-form__submit , .movakel-form__submit{
+    border: none;
+    outline: none;
+    border: 2px solid var(--primary-color);
+    background-color: transparent;
+    padding:.5rem 1.7rem;
+    font-size: 1.6rem;
+    font-family: vazir;
+    border-radius: .7rem;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    text-align: center;
+    color: var(--text-color);
+    transition: all 180ms ease 50ms;
+    width: max-content;
+    margin: 0px auto;
+}
+.login-form__submit:hover , .movakel-form__submit:hover{
+    color: var(--primary-color);
+}
+.login-form__submit::after , .movakel-form__submit::after {
+    position: absolute;
+    content: '';
+    height: 100%;
+    left: 0;
+    top: 0;
+    transition: all 180ms ease;
+    width: 0%;
+    background-color: var(--section-bg-color);
+    z-index: -1;
+}
+.login-form__submit::after , .movakel-form__submit::after{
+    left: unset;
+    right: 0;
+}
+.login-form__submit:hover::after ,.movakel-form__submit:hover::after {
+    width: 100%;
+}
+/* movakel form */
+.movakel-form{
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+  
+}
+.movakel-form__title{
+    font-size: 2.5rem;
+    text-align: center;
+    color: var(--text-color);
+}
+.movakel-form-input-wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 @media (max-width:992px) {
     .template{
