--- a/style/responsive.css
+++ b/style/responsive.css
@@ -39,6 +39,12 @@
         visibility: inherit;
         width: 3rem;
     }
+    .main-head__title{
+        font-size: 3rem;
+    }
+    .main-head__caption{
+        font-size: 1.8rem;
+    }
     .info-box__box{
         flex-basis: 30%;
     }
@@ -101,6 +107,14 @@
     /* 
     +main+
     */
+    .main-head .row{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .main-head__details{
+        text-align: center;
+        align-items: center;
+    }
     .services__btn-wrapper{
         max-width: 70%;
     }
@@ -157,8 +171,13 @@
 
 @media screen and (max-width: 576px){
     
-  
- 
+    .main-head__title{
+        font-size: 2.2rem;
+    }
+    .main-head__caption{
+        font-size: 1.8rem;
+    }
+    
     .services__btn-wrapper{
         flex-wrap: wrap;
         max-width: 80%;
@@ -178,7 +197,7 @@
         grid-column: auto;
         margin: 0px auto;
     }
-    
+
     .info-box__box{
         flex-basis: 100%;
     }
