--- a/style/style.css
+++ b/style/style.css
@@ -106,7 +106,12 @@ a {
     background-color: var(--primary-color);
     position: relative;
 }
-
+select::-webkit-scrollbar{
+    width: 5px;
+}
+select::-webkit-scrollbar-thumb{
+    background-color: var(--darker-primary-color);
+}
 
 body {
     font-size: 1.6rem;
@@ -486,12 +491,11 @@ html.dark .info-box__box{
     margin-bottom: 2rem;
 }
 .services__btn-wrapper{
-    border: 1px solid var(--negative-bg-color);
+    border-bottom: 1px solid var(--negative-bg-color);
     display: flex;
     max-width: 50%;
     justify-content: center;
     padding: 1rem;
-    border-radius: 2rem;
     margin: 0px auto;
     gap: 1.5rem;
     
