refactor btn's services btn's , select and text areas

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -59,6 +59,9 @@
     .Counseling-box__info-wrapper{
         font-size: 1.4rem;
     }
+    .services__btn-wrapper{
+        max-width: unset;
+    }
  
 }
 @media screen and (max-width: 768px){
