--- a/style/style.css
+++ b/style/style.css
@@ -73,9 +73,17 @@ a {
 *{
     font-family: dana;
 }
+select,textarea{
+    border: none;
+    outline: none;
+}
+select:focus,textarea:focus{
+    border: none;
+    outline: none;
+}
 
 /* component */
-.login-btn {
+.btn {
     background-image: var(--btn-linear);
     color: #fff;
     border-radius: .4rem;
@@ -86,10 +94,27 @@ a {
     transition: var(--app-transition);
     font-family: dana;
     user-select: none;
+    position: relative;
+    overflow: hidden;
 }
-.login-btn:hover{
-    transform: scale(1.1);
+.btn::after {
+    position: absolute;
+    content: "";
+    background-color: #fff;
+    height: 155px;
+    left: -75px;
+    opacity: .2;
+    top: -50px;
+    transform: rotate(35deg);
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+    width: 50px;
 }
+
+.btn:hover::after {
+    left: 120%;
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
 .fade-circle{
     width: 20rem;
     height: 20rem;
@@ -520,23 +545,37 @@ html.dark .info-box__box{
 .services__link{
     flex-basis: 30%;
     cursor: pointer;
-    border:1px solid var(--primary-color);
-    color: #fff;
-    display: inline-flex;
+    color: var(--text-color);
+    border-radius: .4rem;
+    display: flex;
     align-items: center;
     justify-content: center;
-    padding: .5rem 1rem;
-    font-size: 2rem;
-    text-align: center;
-    border-radius: 2rem;
-    transition: all 180ms ease-in;
-    /* transform: translateY(.2rem); */
-    color: var(--text-color);
+    padding: 1rem 1.5rem;
+    transition: var(--app-transition);
+    font-family: dana;
     user-select: none;
+    position: relative;
+    overflow: hidden;
+    user-select: none;
+    border: 1px solid var(--primary-color);
+    font-size: 1.8rem;
+    text-align: center;
 }
-.services__link:hover{
-    transform: scale(1.1) translateY(0);
-    background-color:  rgba(255,255,255,.1);
+.services__link::after{
+    position: absolute;
+    content: "";
+    background-color: #fff;
+    height: 155px;
+    left: -75px;
+    opacity: .2;
+    top: -50px;
+    transform: rotate(35deg);
+    transition: all .7s cubic-bezier(0.19, 1, 0.22, 1);
+    width: 50px;
+}
+
+.services__link:hover::after {
+    left: 120%;
 }
 .services__link--active{
     background-color: var(--primary-color) !important;
@@ -586,7 +625,7 @@ html.dark .info-box__box{
     gap: 2rem;
 }
 .services__select-box {
-    font-family: BkoodakBold;
+    font-family: dana;
     flex-basis: 50%;
     background-color: var(--section-bg-color);
     color: var(--negative-bg-color);
