--- a/style/style.css
+++ b/style/style.css
@@ -46,8 +46,8 @@
     --darker-primary-color: #1565c0;
     --secondery-color: #ff9800;
     --text-color: #616161;
-    --bg-color: #fff;
-    --section-bg-color: #eeeeee;
+    --bg-color: #eeeeee;
+    --section-bg-color: #e0e0e0;
     --negative-bg-color: #1F2935;
     --zero-to-255:0;
     --app-transition: all 180ms ease-in;
